...
    <string name="menu_settings">Settings</string>
    <string name="menu_documentation">Documentation</string>
    <string name="settings_title">Settings</string>
    <string name="settings_storage_title">Storage</string>
    <string name="settings_audio_folder_title">Audio folder</string>
    <string name="settings_output_file_title">Automatic transcript export</string>
    <string name="settings_output_action_title">Configure automatic transcript export</string>
    <string name="settings_output_create_new">Create New</string>
    <string name="settings_output_choose_existing">Choose Existing</string>
    <string name="settings_output_do_not_export">Do not export</string>
    <string name="settings_about_title">About</string>
    <string name="settings_about_version">Version: %1$s</string>
    <string name="settings_about_website">Website</string>
    <string name="settings_about_legal">Legal information</string>
    <string name="settings_about_link_error">No app can open this link.</string>
...
